<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".acceso.RegistroUser"
    android:paddingLeft="30dp"
    android:paddingRight="30dp">
    <!--TODO Styles-->
    <ImageView
        android:id="@+id/ivLogoRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/logo"
        android:contentDescription="logo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivLogoRegistro"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true">

        <EditText
            android:id="@+id/etNombreApellidosReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_nomuser_reg"/>
        <EditText
            android:id="@+id/etTlfnoReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/et_tlfnouser_reg"/>
        <EditText
            android:id="@+id/etUserNameReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_nickuser_reg"
            />
        <EditText
            android:id="@+id/etUserMailReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/et_mailuser_reg"/>
        <EditText
            android:id="@+id/etUserPwdReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/et_pwd_reg"/>
        <EditText
            android:id="@+id/etUserPwdConfReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/et_pwdconf_reg"/>

        <Button
            android:id="@+id/btn_registro_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="registrar"
            android:text="@string/btn_registro_user" />
    </LinearLayout>
</RelativeLayout>