<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VentasActivity">

    <TextView
        android:id="@+id/tvVentas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="8dp"
        android:text="VENTAS"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textStyle="bold"
        android:textColor="@color/naranja"
        />

    <LinearLayout
        android:id="@+id/llBuscar"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_below="@id/tvVentas">

        <EditText
            android:id="@+id/etCodigoV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint_et_codigo"
            android:enabled="true"
            android:textColorHint="@color/naranja" />

        <Button
            android:id="@+id/btnBuscarV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/btn_buscar"
            android:onClick="buscarV"
            android:enabled="true"
            android:background="@color/naranja"
            />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/llFiltroV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/llBuscar">


        <EditText
            android:id="@+id/etNombreV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/hint_et_nombre_producto"
            android:enabled="false"
            android:textColorHint="@color/naranja"

            />

        <EditText
            android:id="@+id/etProveedorV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:hint="@string/hint_et_proveedor"
            android:enabled="false"

            android:textColorHint="@color/naranja" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/llNumerosV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/llFiltroV">

        <EditText
            android:id="@+id/etCantidadV"
            android:layout_width="178dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:hint="@string/hint_et_cantidad"
            android:inputType="number"
            android:textColorHint="@color/naranja"
            android:enabled="false"/>

        <EditText
            android:id="@+id/etPrecioVentaV"
            android:layout_width="276dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/hint_et_precio_venta"
            android:enabled="false"
            android:inputType="number"
            android:textColorHint="@color/naranja" />

        <EditText
            android:id="@+id/etTotalV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textColorHint="@color/naranja"
            android:enabled="false"
            android:hint="@string/hint_et_total"
            android:inputType="number"/>



    </LinearLayout>
    <LinearLayout
        android:id="@+id/llBotones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/llNumerosV">
        <Button
            android:id="@+id/btnGuardarV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/naranja"
            android:enabled="false"
            android:onClick="guardarV"
            android:text="@string/btn_guardar"
            android:textColorHint="@color/naranja" />

        <Button
            android:id="@+id/btnReiniciarV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@color/naranja"
            android:enabled="true"
            android:onClick="reiniciarV"
            android:text="@string/btn_Reiniciar"
            android:textColorHint="@color/naranja" />

    </LinearLayout>

</RelativeLayout>