<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    tools:context=".acceso.Login">

    <!-- TODO Styles-->

    <Button
        android:id="@+id/btnRegistroUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPassword"
        android:layout_marginEnd="-126dp"
        android:layout_marginRight="-126dp"
        android:layout_toEndOf="@+id/btnEntrar"
        android:layout_toRightOf="@+id/btnEntrar"
        android:background="@color/transparente"
        android:shadowDx="0"
        android:text="@string/btn_registro_user" />

    <ImageView
        android:id="@+id/ivLogoLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/logo"
        android:contentDescription="logo"/>
    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivLogoLogin"
        android:autofillHints="@string/hint_et_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etEmail"
        android:layout_marginTop="25dp"
        android:autofillHints="@string/hint_et_pwd"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnEntrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPassword"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_entrar" />

</RelativeLayout>